# waterCodeFlow

./: EXTENSION_DISTRIBUTION_GUIDE.md  INTEGRATION_VERIFICATION_REPORT.md  README.md  USAGE_SURFACE.md
.codevovle/: state.json
CodeVovle/: .env  FEATURE_MATRIX.md  INTEGRATION_REPORT.md  Makefile  QUICKSTART_RECURSIVE_BRANCHING.md  README.md  RECURSIVE_BRANCHING.md  TESTING_SUMMARY.md  test_recursive_branching.py
CodeVovle/codevovle/: __init__.py  __main__.py  cli.py  diffs.py  env_manager.py  storage.py
CodeVovle/tests/: test_branching.py  test_cli.py  test_cli_integration.py  test_diffs.py  test_e2e.py  test_recording.py  test_storage.py  test_storage_utility.py
editor/idea_images/: 3Calrification.txt  4Clarification.txt  7Clarification.txt  8Clarification.txt  9Clarification.txt  ForJudges.txt
editor/media/: inspector.js  recordings.js  variables.js
editor/src/: glueClient.ts
editor/src/panels/: InsightsPanel.ts  VariableInspectionPanel.ts
editor/src/providers/: VariablesViewProvider.ts
extension/: CMakeLists.txt  DecisionOfBuilding.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  full_setup.sh  package.json  tsconfig.json
extension/.codevovle/: state.json
extension/CodeVovle/: IMPLEMENTATION_SUMMARY.md  TEST_VALIDATION_REPORT.md  storage_utility.py
extension/CodeVovle/codevovle/: daemon.py  daemon_handlers.py  engine.py  handlers.py  insights.py  profiler.py
extension/CodeVovle/scripts/: update_progress.py
extension/CodeVovle/tests/: conftest.py  test_insights.py  test_revert_branching.py
extension/editor/: README.md  package-lock.json  package.json
extension/editor/idea_images/: 10Clarification.txt  1clarificatio.txt  2Clarification.txt  5Carification.txt  6Clarification.txt
extension/editor/media/: insights.js  variables.css
extension/editor/src/: extension.ts  types.ts
extension/editor/src/providers/: RecordingsViewProvider.ts
extension/glue/: README.md  __init__.py  adapter.py  runs.py  watch.py
extension/glue/tests/: test_api_basic.py  test_variables.py
extension/media/: insights.css  inspector.css  recordings.css  recordings.js
extension/src/: glueClient.ts
extension/watcher/: setup.sh
extension/watcher/adapters/javascript/: test_real.js
extension/watcher/adapters/python/: adapter.cpp  ffi.hpp
extension/watcher/cli/: main.py  scope_config_parser.py
extension/watcher/core/: event_enricher.py  event_writer.py
extension/watcher/core/include/: watcher_core.hpp
extension/watcher/core/src/: watcher_core.cpp
extension/watcher/examples/: python_example.py
extension/watcher/processor/: processor.cpp
extension/watcher/processor/include/: processor.hpp
extension/watcher/tests/: cli_questions.md  test_javascript_loader.py  test_javascript_processor.py  test_mutations.js  test_python_adapter.py  test_real_integration.py
extension/watcher/tests/fixtures/: js_processor_basic.js  js_user_script_basic.js  js_user_script_with_watch.js
glue/: PROGRESS.md  VERIFICATION_CHECKLIST.md  api.py  errors.py  variables.py
glue/examples/: demo_api.py
glue/tests/: test_runs.py
src/: extension.ts
watcher/: CMakeLists.txt  README.md  cleanup.sh  setup.sh
watcher/adapters/javascript/: adapter.cpp  index.js
watcher/adapters/python/: __init__.py
watcher/cli/: processor_runner.py
watcher/core/: event_bridge.py
watcher/examples/: javascript_example.js  processor_example.py
watcher/tests/: test_core.cpp  test_cpp_integration.py  test_event_enrichment.py  test_functionality.py  test_javascript_loader.py  test_javascript_processor.py  test_mutations.py  test_real.py  test_real_mutations.py  test_stress_phase2.py
